external-crates/move/crates/move-compiler/tests/move_2024/matching/at_pattern_drop.exp
error[E13003]: feature is under active development
  ┌─ tests/move_2024/matching/at_pattern_drop.move:3:17
  │
3 │     public enum Maybe<T> has drop {
  │                 ^^^^^ Enums are not supported in bytecode.
  │
  = This feature is currently in development.

